--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -24,6 +24,7 @@ Hier ist erkennbar, wie sich die gebildeten Poren wieder schließen.
 Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil abgebildet.
 
 \begin{figure}[h]
+  \caption{Profile fehlgeschlagener Simulationen von Multilagen-Abscheidungen}
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
@@ -37,7 +38,6 @@ Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil 
     \caption{Profil eines Systemes nach 6 Lagen je \SI{5}{\nano\meter}}
     \label{fig:multilayer_thickfail}
   \end{subfigure}
-  \hfill
 \end{figure}
 
 \section{Multilagen mit einer Dicke von \SI{5}{\nano\meter}}
