--- a/multilayer.tex
+++ b/multilayer.tex
@@ -12,7 +12,7 @@ Eine Auswertung der relativen Verteilung der Atomsorten entlang der Abscheidungs
 Abscheidungen mit Lagen einer Dicke von \SI{6}{\nano\meter} wurden ebenfalls mit Parsivald simuliert, doch mangels verfügbarer Rechenzeit für vergleichbare LAMMPS-Simulationen nicht eingehender untersucht.
 
 Wie bei den Gold-PVD-Simulation zuvor müssen für erfolgreiche Simulationen einige Prozessparameter wie Relaxationszeit, Thermostatdämpfung und Substrattemperatur optimiert werden.
-\todo{wort}Das geschah hinsichtlich der Rauheit der Oberfläche zur Vermeidung von Fehlstellen sowie hinsichtlich der Qualität der einzelnen Lagen im Vergleich mit ähnlichen Untersuchungen\cite{zhou_atomistic_1998}.
+\todo{wort}Das geschah hinsichtlich der Rauheit der Oberfläche zur Vermeidung von Fehlstellen sowie \todo{hinsichtlich hinsichtlich hinsichtlich}hinsichtlich der Qualität der einzelnen Lagen im Vergleich mit ähnlichen Untersuchungen\cite{zhou_atomistic_1998}.
 In diesen wurde bereits gezeigt, dass die kinetische Energie der einfallenden Atome einen erheblichen Einfluss auf die Qualität der einzelnen Lagen hat, weshalb gleichartige Untersuchungen nur hinsichtlich der Substrattemperatur durchgeführt wurden.
 
 \subsection{Ergebnisse}
