--- a/appendix.tex
+++ b/appendix.tex
@@ -1,5 +1,6 @@
 \begin{appendix}
   \input{appendix_multilayer}
+  \input{appendix_silicon}
 
   %\newpage
   %\addcontentsline{toc}{chapter}{B. Danksagung}
