--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -9,7 +9,7 @@ Aus diesem Grund ist eine einfache Voruntersuchung der verfügbaren Parametersä
 \begin{table}
   \caption[EAM-Parametrisierungen für Kupfersysteme]{EAM-Parametrisierungen für Kupfersysteme.}
   \label{tab:copperpots}
-  \rowcolors{0}{white}{lightgray}
+  \oddrowcolors
   \begin{tabularx}{\textwidth}{|lXc|}
     \hline
     \textbf{Bezeichnung}        & \textbf{Anwendung \& Kommentare}                                             & \textbf{Ref.}                            \\
