--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -97,7 +97,7 @@ Zusätzlich wurden Lamellen und Gitter mit einer Strukturbreite von \SI{16}{\ang
     \label{fig:golddepositions-c}
   \end{subfigure}
 
-  \Large\center{$\Downarrow$}
+  \LARGE\center{$\Downarrow$}
   \vspace{0.25cm}
 
   \captionsetup[subfigure]{singlelinecheck=false}
