--- a/mdtests.tex
+++ b/mdtests.tex
@@ -1,4 +1,5 @@
 \section{Tests für MD-Potentiale zur Schichtabscheidung}
+\label{mdtests}
 
 Vor der Nutzung von Parametrisierungen von Wechselwirkungspotentialen für die Molekulardynamik sollten diese durch eine Reihe von Tests auf ihre Anwendbarkeit geprüft werden.
 Diese Parametrisierungen sind jeweils für einen speziellen Zweck erstellt worden und decken meist nur diesen zuverlässig ab\todo{und manchmal nicht mal das}.
