--- a/results.tex
+++ b/results.tex
@@ -1,16 +1,15 @@
 \cleardoublepage
 \chapter{Ergebnisse}
 
-\todo[inline]{Neu schreiben: Was will ich eigentlich?}
+Unter Nutzung der in Kapitel \ref{theory} und Kapitel \ref{models} vorgestellten Methoden werden im folgenden Kapitel Abscheidungssimulationen mit dem Ziel durchgeführt, die Präparation, Durchführung, Möglichkeiten und Einschränkungen des Parsivald-Modelles für PVD und CVD zu prüfen.
 
-Im Verlauf der Untersuchung möglicher Prozesse wurden Abscheidungen verschiedener Materialien und Methoden simuliert, die unterschiedliche Aspekte der Präparation, Durchführung und Einschränkungen von Parsivald-simulierten Prozessen demonstrieren.
-
-Abschnitt \ref{goldpvd} zeigt allgemeine Voruntersuchungen eines Potentiales und seiner MD-Parameter sowie die Nutzung strukturierter Substrate anhand von Gold-PVD.
-Im darauf folgenden Abschnitt \ref{copperpvd} werden verschiedene Potentiale auf die Anwendbarkeit auf Kupfer-PVD überprüft.
-Per PVD abgeschiedene Multilagensysteme stehen in Abschnitt \ref{multilayer} \todo{phrasing}zur Untersuchung.
-Silizium-PVD stellt abschließend Probleme mit amorphen Materialien in Abschnitt \ref{siliconpvd} dar.
-%% Abschnitt \ref{silicacvd} demonstriert binäre Abscheidungssysteme anhand von Siliziumoxid-CVD.
-%% Schließlich wird in Abschnitt \ref{aluminaald} ein ALD-Prozess anhand des TMA-\ce{H2O}-Prozesses untersucht.
+Dazu werden in eigenständigen Abschnitten verschiedene Systeme auf unterschiedliche Aspekte untersucht:
+Abschnitt \ref{goldpvd} zeigt anhand von Gold-PVD allgemeine Voruntersuchungen für einen Parametersatz, strukturelle Unterschiede zwischen realen und simulierten Schichten, Schichtabscheidung auf strukturierten Substraten sowie die praktische Skalierbarkeit der Simulation.
+Der darauf folgende Abschnitt \ref{copperpvd} stellt Voruntersuchungen unterschiedlicher Parametersätze, Oberflächenunebenheiten und deren automatische Schließung anhand von Kupfer-PVD dar.
+Anschließend werden Kupfer-Nickel-Multilagensysteme in Abschnitt \ref{multilayer} zur Parsivald-Simulation vorbereitet und mit LAMMPS-simulierten Systemen verglichen.
+In Abschnitt \ref{siliconpvd} werden Silizium-PVD-Systeme mit dem Ziel der Abscheidung amorpher Schichten untersucht.
+Abschnitt \ref{aluminaald} kehrt kurz zum Thema der Bachelorarbeit zurück und untersucht TMA und Wasser als Precursoren der \ce{Al2O3}-ALD.
+Zuletzt werden in Abschnitt \ref{silicacvd} Precursor-Reaktionen und die darauf basierende Siliziumoxid-CVD behandelt.
 
 \input{goldpvd}
 \clearpage
@@ -21,3 +20,5 @@ Silizium-PVD stellt abschließend Probleme mit amorphen Materialien in Abschnitt
 \input{siliconpvd}
 \clearpage
 \input{aluminaald}
+\clearpage
+\input{silicacvd}
