--- a/settings.tex
+++ b/settings.tex
@@ -60,3 +60,4 @@
 \algnewcommand\Assumption{\item[\algorithmicassumption]}
 
 \DeclareSIUnit\gpcc{\gram\per\cubic\centi\meter}
+\newcommand{\oddrowcolors}[0]{\rowcolors{0}{white}{lightgray}}
