--- a/appendix_silicon.tex
+++ b/appendix_silicon.tex
@@ -33,16 +33,17 @@
     \oddrowcolors
     \begin{tabularx}{\textwidth}{|XXXX|}
       \hline
-      \textbf{Parametrisierung} & \textbf{Bindungslänge} & \textbf{Koordinationszahl} & \textbf{Dichte}   \\
+      \textbf{Parametrisierung} & \textbf{Bindungslänge} & \textbf{Koordinationszahl} & \textbf{Dichte}                          \\
       \hline
-      (Kristall)                & \SI{2.352}{\angstrom}  & \num{4.00}                 & \SI{2.330}{\gpcc} \\
-      Al\_Al0\_AlN              & \SI{2.379}{\angstrom}  & \num{4.59}                 & \SI{2.373}{\gpcc} \\
-      kulkarni                  & \SI{2.339}{\angstrom}  & \num{4.05}                 & \SI{2.361}{\gpcc} \\
-      liu\_ettr.                & \SI{2.401}{\angstrom}  & \num{4.10}                 & \SI{2.314}{\gpcc} \\
-      narayanan                 & \SI{2.383}{\angstrom}  & \num{4.05}                 & \SI{2.365}{\gpcc} \\
-      newsome                   & \SI{2.153}{\angstrom}  & \num{1.17}                 & \SI{2.398}{\gpcc} \\
-      nielson                   & \SI{2.411}{\angstrom}  & \num{4.82}                 & \SI{2.358}{\gpcc} \\
-      zhang                     & \SI{2.357}{\angstrom}  & \num{4.39}                 & \SI{2.329}{\gpcc} \\
+      (kristallin)              & \SI{2.352}{\angstrom}  & \num{4.00}                 & \SI{2.330}{\gpcc}                        \\
+      (amorph)                  & ~                      & ~                          & \SI{2.3}{\gpcc}\cite{remes_optical_1998} \\
+      Al\_Al0\_AlN              & \SI{2.379}{\angstrom}  & \num{4.59}                 & \SI{2.373}{\gpcc}                        \\
+      kulkarni                  & \SI{2.339}{\angstrom}  & \num{4.05}                 & \SI{2.361}{\gpcc}                        \\
+      liu\_ettr.                & \SI{2.401}{\angstrom}  & \num{4.10}                 & \SI{2.314}{\gpcc}                        \\
+      narayanan                 & \SI{2.383}{\angstrom}  & \num{4.05}                 & \SI{2.365}{\gpcc}                        \\
+      newsome                   & \SI{2.153}{\angstrom}  & \num{1.17}                 & \SI{2.398}{\gpcc}                        \\
+      nielson                   & \SI{2.411}{\angstrom}  & \num{4.82}                 & \SI{2.358}{\gpcc}                        \\
+      zhang                     & \SI{2.357}{\angstrom}  & \num{4.39}                 & \SI{2.329}{\gpcc}                        \\
       \hline                                                                                  
     \end{tabularx}
 
