--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -40,7 +40,7 @@ Wie Tabelle \ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Param
 
 \begin{table}
   \begin{threeparttable}
-    \rowcolors{0}{white}{lightgray} 
+    \oddrowcolors 
     \caption[Eigenschaften von Kupfer]{Voruntersuchungen: Vergleich der Simulationsergebnisse mit Literaturdaten}
     \label{tab:copperpreresults}
     \begin{tabularx}{\textwidth}{|Xrrrrr|}
