--- a/datastructures.tex
+++ b/datastructures.tex
@@ -88,7 +88,7 @@ Ein Vergleich der asymptotischen Laufzeiten auf verschiedenen Datenstrukturen is
 \end{table}
 
 \begin{table}
-  \rowcolors{0}{white}{lightgray}
+  \oddrowcolors
   \caption[datasymbols]{Symbole für Laufzeit- und Speicherabschätzungen}
   \label{tab:datasymbols}
   \begin{tabularx}{\textwidth}{|cX|cX|}
@@ -104,7 +104,7 @@ Ein Vergleich der asymptotischen Laufzeiten auf verschiedenen Datenstrukturen is
 \end{table}
 
 \begin{table}
-  \rowcolors{0}{white}{lightgray}
+  \oddrowcolors
   \caption[Liste der notwendigen Operationen]{
     Übersicht über Operationen, die auf die zugrunde liegenden Datenstrukturen ausgeführt werden.
     Oberflächen- und Bereichssuchen sind am häufigsten.
@@ -160,7 +160,7 @@ Durch Unterschiede in der Funktionsweise verschiedener Algorithmen und Datenstru
 Während der Entwicklung und Implementierung des Parsivald-Modelles wurden Algorithmen aus den folgenden Kategorien in Betracht gezogen.
 
 \begin{table}
-  \rowcolors{0}{white}{lightgray}
+  \oddrowcolors
   \caption[Liste der notwendigen Operationen]{
     Übersicht über Operationen, die auf die zugrunde liegenden Datenstrukturen ausgeführt werden.
     Oberflächen- und Bereichssuchen sind am häufigsten.
