--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -12,7 +12,7 @@ Wie man den Ergebnissen ansehen kann, bleibt die Kristallstruktur erwartungsgem√
 Die Parametrisierung repr√§sentiert somit das Zielsystem.
 
 \begin{table}
-  %% \rowcolors{0}{white}{lightgray} 
+  %% \oddrowcolors 
   \caption[Eigenschaften von Gold]{Vergleich der Eigenschaften von Gold mit experimentellen und Literaturdaten als Voruntersuchung des PVD-Prozesses
     %% \todo[inline]{ref}
   }
