--- a/literature.bib
+++ b/literature.bib
@@ -436,3 +436,20 @@
 	pages = {3034--3040},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/R5KVHVBP/Yang and Cheh - 1995 - Pulsed Electrodeposition of CopperNickel Multilay.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/E6B23AGE/3034.html:text/html}
 }
+
+@article{remes_optical_1998,
+	title = {Optical determination of the mass density of amorphous and microcrystalline silicon layers with different hydrogen contents},
+	volume = {227–230, Part 2},
+	issn = {0022-3093},
+	url = {http://www.sciencedirect.com/science/article/pii/S0022309398002075},
+	doi = {10.1016/S0022-3093(98)00207-5},
+	abstract = {We have measured the density of amorphous and microcrystalline silicon films using an optical method. The mass density decreases with increasing hydrogen content, consistent with a hydrogenated di-vacancy model that fits the data for amorphous silicon. Material produced by hot wire assisted chemical vapour deposition, with low hydrogen content, has a higher density and is structurally different from glow discharge material with hydrogen content around 10 at.\%. The lower density microcrystalline silicon seems to be porous.},
+	urldate = {2014-10-28},
+	journal = {Journal of Non-Crystalline Solids},
+	author = {Remeš, Z and Vaněček, M and Torres, P and Kroll, U and Mahan, A. H and Crandall, R. S},
+	month = may,
+	year = {1998},
+	keywords = {Hydrogen contents, Mass density, Silicon layers},
+	pages = {876--879},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/GZFM25FS/Remeš et al. - 1998 - Optical determination of the mass density of amorp.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6I393MBX/S0022309398002075.html:text/html}
+}
