--- a/md.tex
+++ b/md.tex
@@ -314,7 +314,7 @@ Für molekulardynamische Simulationen gibt es sowohl kommerzielle als auch freie
 Tabelle \ref{tab:mdsoftware} stellt eine Auswahl daraus dar.
 
 \begin{table}
-  \rowcolors{0}{white}{lightgray}
+  \oddrowcolors
   \caption[MD-Software]{MD-Software}
   \label{tab:mdsoftware}
   \begin{tabularx}{\textwidth}{|llX|}
