--- a/mdtests.tex
+++ b/mdtests.tex
@@ -12,7 +12,7 @@ So wird die kristalline und amorphe Struktur, ihre Dichte, radiale Verteilungsfu
 Diese Tests sind in Tabelle \ref{tab:mdtestvariants} dargestellt.
 
 \begin{table}
-  \rowcolors{0}{white}{lightgray}
+  \oddrowcolors
   \begin{tabularx}{\textwidth}{|lXX|}
     \hline
     \textbf{Test} & \textbf{Vorgehensweise} & \textbf{Ergebnis} \\
