--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -14,7 +14,7 @@ Tabelle \ref{tab:siliconpotentials} listet die im Rahmen der Arbeit untersuchten
 \begin{table}
   \caption[Silizium-Potentialdateien]{Potentialdateien für Silizium- und Siliziumoxidsysteme}
   \label{tab:siliconpotentials}
-  \rowcolors{0}{white}{lightgray}
+  \oddrowcolors
   \begin{tabularx}{1\textwidth}{|lXc|}
     \hline
     \textbf{Bezeichnung} & \textbf{Anwendung \& Kommentare} & \textbf{Ref.} \\
@@ -47,7 +47,7 @@ Die Ergebnisse dieser Betrachtungen wurden in Tabelle \ref{tab:siliconpreresults
     }
     \label{tab:siliconpreresults}
 
-    \rowcolors{0}{white}{lightgray}
+    \oddrowcolors
     \begin{tabularx}{\textwidth}{|lCCCCCCCC|}
       \hline
       \textbf{Bezeichnung}    & LMP    & c-\ce{Si} & c-\ce{SiO2} & a-\ce{Si} & \ce{SiH4} & \ce{+O2} & PVD\tnote{a} & CVD\tnote{b} \\
@@ -92,9 +92,11 @@ Anhang \ref{appendix:silicon} beinhaltet Abbildungen eines Vergleiches der Bindu
 \subsubsection{Amorphes Silizium (a-\ce{Si})}
 
 Durch langsame Relaxation zufällig positionierter Siliziumatome wurde amorphes Silizium simuliert, das wie die Kristalle zuvor auf Dichte und Bindungslängen untersucht wurde.
-Die 
+Deren Werte variieren stärker als für kristalline Systeme, liegen jedoch nah am experimentell bestimmten Wert von \SI{2.3}{\gpcc}\cite{remes_optical_1998}, anstatt Cluster und Hohlräume zu bilden.
 
 \subsubsection{Stabilität der Precursormoleküle (\ce{SiH4}, \ce{O2})}
+
+\todo[inline]{continuehere}
 
 \subsubsection{Reaktion der Precursormoleküle (\ce{SiH4 + O2})}
 
